--- a/PageUnit_3.html
+++ b/PageUnit_3.html
@@ -63,30 +63,30 @@ a#subtn_6181a5564386a:hover { background-color: #b92c4f;}
 
 	<!-- MENU -->
 	<div>
-		<div class="Nav">
-			<div class="Menu">
-				<div class="li"><a href="Index.html" class="BTN">Inicio<span class="fas fa-home"></span></a></div>
-				<div class="li"><a href="#" disabled>Unidad<span class="fas fa-caret-down"></span></a>
-					<div class="Submenu">
-						<div class="li"><a href="PageUnit_1.html">Unidad 1</a></div>
-						<div class="li"><a href="PageUnit_2.html">Unidad 2</a></div>
-						<div class="li"><a href="PageUnit_3.html">Unidad 3</a></div>
-					</div>
-				</div>
-				<div class="li"><a href="#" disabled>Oferta Educativa<span class="fas fa-caret-down"></span></a>
-					<div class="Submenu">
-						<div class="li"><a href="Pagina1.html">Ingenieria en Sistemas Computacionales</a></div>
-						<div class="li"><a href="Pagina2.html">Ingenieria en Gestion Empresarial</a></div>
-					</div>
-				</div>
-				<div class="li"><a href="#">Noticias<span class="fas fa-caret-down"></span></a>
-					<div class="Submenu">
-						<div class="li"><a href="EventPage.html">Eventos y Concursos</a></div>
-					</div>
-				</li>
-			</div>
-		</div>
-	</div>
+        <div class="Nav">
+            <div class="Menu">
+                <div class="li"><a href="Index.html" class="BTN">Inicio<span class="fas fa-home"></span></a></div>
+                <div class="li"><a href="#" disabled>Unidad<span class="fas fa-caret-down"></span></a>
+                    <div class="Submenu">
+                        <div class="li"><a href="PageUnit_1.html">Mensaje de Bienvenida</a></div>
+                        <div class="li"><a href="PageUnit_2.html">Filosofía Institucional</a></div>
+                        <div class="li"><a href="PageUnit_3.html">Historia</a></div>
+                    </div>
+                </div>
+                <div class="li"><a href="#" disabled>Oferta Educativa<span class="fas fa-caret-down"></span></a>
+                    <div class="Submenu">
+                        <div class="li"><a href="Pagina1.html">Ingeniería en Sistemas Computacionales</a></div>
+                        <div class="li"><a href="Pagina2.html">Ingeniería en Gestión Empresarial</a></div>
+                    </div>
+                </div>
+                <div class="li"><a href="#">Noticias<span class="fas fa-caret-down"></span></a>
+                    <div class="Submenu">
+                        <div class="li"><a href="EventPage.html">Eventos y Concursos</a></div>
+                    </div>
+                </li>
+            </div>
+        </div>
+    </div>
 
 	<!-- MAIN -->
 	<section id="g-container-main" class="g-wrapper">
@@ -251,27 +251,32 @@ a#subtn_6181a5564386a:hover { background-color: #b92c4f;}
 	
 	<!-- FOOTER -->
 	<div class="FooterContainer">
-		<div class="Footer">
+		  <div class="Footer">
 
-			<!-- FOOTER OLD -->
-			<!--<div class="F_Title"><span>Dirección</span></div>
-			<div class="F_Text"><span>
-			La unidad de Chunhuhub se encuentra en las instalaciones de la Escuela Secundaria Tecnica #5 "Emiliano Zapata" con direccion Via Corta Crretera Chetumal Kilometro 3, Colia Gonzalo Guerrero Chunhuhub Quintana Roo, Felipe Carrillo Puerto.
-			</span></div>-->
+            <!-- FOOTER OLD -->
+            <!--<div class="F_Title"><span>Dirección</span></div>
+            <div class="F_Text"><span>
+            La unidad de Chunhuhub se encuentra en las instalaciones de la Escuela Secundaria Tecnica #5 "Emiliano Zapata" con direccion Via Corta Crretera Chetumal Kilometro 3, Colia Gonzalo Guerrero Chunhuhub Quintana Roo, Felipe Carrillo Puerto.
+            </span></div>-->
 
-			<div class="LogoFContainer"><a href="https://www.tecnm.mx/" target="_Blank"><img class="LogF_1" src="Imagenes/Logos/LogoF_1.png" alt="Logo_Footer_1"></a></div>
-			<div class="CopyContainer">
-				<span class="Copy1"><b>TecNM ©</b> - Todos los Derechos Reservados 2021</Span>
-				<span class="Copy2">Campus Felipe Carrillo Puerto, Q.Roo, México</span>
-			</div>
-			<div class="Sponsors">
-				<div><span>Sponsors</span></div>
-				<div><a href="https://www.fundaciontulum.org/" target="_Blank"><img class="LogF_2" src="Imagenes/Logos/Sponsor_1.png" alt="Logo_Footer_2"></a>
-				<a href="http://www.arturobayona.com/" target="_Blank"><img class="LogF_3" src="Imagenes/Logos/Sponsor_2.png" alt="Logo_Footer_3"></a></div>
-			</div>
-		</div>
-		<div class="Row EGG" contenteditable="False"></div>
-	</div>
+            <div class="LogoFContainer"><a href="https://www.tecnm.mx/" target="_Blank"><img class="LogF_1" src="Imagenes/Logos/LogoF_1.png" alt="Logo_Footer_1"></a></div>
+            <div class="CopyContainer">
+                <span class="Copy1"><b>TecNM ©</b> - Todos los Derechos Reservados 2021</Span>
+                <span class="Copy2">Campus Felipe Carrillo Puerto, Q.Roo, México</span>
+            </div>
+            <div class="Sponsors">
+                <div><span>Nuestros Aliados</span></div>
+                <div><a href="https://www.fundaciontulum.org/" target="_Blank"><img class="LogF_2" src="Imagenes/Logos/Sponsor_1.png" alt="Logo_Footer_2"></a>
+                <a href="http://www.arturobayona.com/" target="_Blank"><img class="LogF_3" src="Imagenes/Logos/Sponsor_2.png" alt="Logo_Footer_3"></a></div>
+            </div>
+        </div>
+        <div class="TEL">
+            <span class="Title">Para mayor Información</span>
+            <div><span class="Copy2">TELEFONO: +52 9831127485</span>
+            <span class="Copy2">CORREO: Chunhuhub@itscarrillopuerto.edu.mx</span></div>
+        </div>
+        <div class="Row EGG" contenteditable="False"></div>
+    </div>
 
 
 	<script src="js/jquery-3.3.1.slim.min.js"></script>
