--- a/eventpage.html
+++ b/eventpage.html
@@ -7,7 +7,7 @@
 
 	<link rel="icon" type="image/x-icon" href="imagenes/Logos/@favicon.ico"/>
 	<link rel="stylesheet" type="text/css" href="Css/MainStyles.css">
-	<link rel="stylesheet" type="text/css" href="Css/PageUnit_2.css">
+	<link rel="stylesheet" type="text/css" href="Css/EventPage.css">
 
 	<!-- ICONS -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -29,7 +29,7 @@
 	<div class="Redes">
 		<div class="Icons Facebook">
 			<a href="https://www.facebook.com/UnidadChunhhuhb/?ti=as" target="_Blank" class="Icon Facebook"><img src="imagenes/Logos/Facebook_logo.svg" title="Facebook"></a>
-			<a href="#" class="Icon" title="Gmail"><img src="imagenes/Logos/Gmail_logo.svg"></a>
+			<a href="mailto:Chunhuhub@itscarrillopuerto.edu.mx" class="Icon" title="Gmail"><img src="imagenes/Logos/Gmail_logo.svg"></a>
 		</div>
 	</div>
 
@@ -60,36 +60,93 @@
 		</div>
 	</div>
 
-	<!-- MAIN -->
+	<!-- MAIN !PLACE YOUR BODY HERE! -->
 	<div class="Main">
-		<div class="TextHeader">
-			<span>Filosofía Institucional</span>
+		<div class="EventContainer"><!-- COPYPASTE -->
+			<a href="imagenes/vinvestigacion621.jpg" target="_Blank" class="InfoContainer">
+				<div class="Container">
+					<div class="ImgContainer">
+						<img src="imagenes/vinvestigacion621.jpg">
+					</div>
+					<div class="TextContainer">
+						<div class="Title">
+							<span>Arranca el XXVI Verano de investigacion cientifica del pacifico</span>
+						</div>
+						<div class="InfoText">
+							<span>TECNM campus: Felipe carrillo Puerto</span>
+						</div>
+					</div>
+				</div>
+				<div class="Link">
+					<span>Ver evento</span>
+				</div>
+			</a>
 		</div>
-		<div class="Mision">
-			<div class="Logo">
-				<img src="Imagenes/Logos/tecnmlogo.jpg">
-			</div>
-			<div class="Text">
-				<div class="Title">
-					<span>Misión</span>
+		<div class="EventContainer"><!-- COPYPASTE -->
+			<a href="Imagenes/THUMBNAIL_1.jpeg" target="_Blank" class="InfoContainer">
+				<div class="Container">
+					<div class="ImgContainer">
+						<img src="Imagenes/THUMBNAIL_1.jpeg">
+					</div>
+					<div class="TextContainer">
+						<div class="Title">
+							<span>Semana nacional de Educacion Financiera</span>
+						</div>
+						<div class="InfoText">
+							<span>Conferencia: Control de ingreso familiar</span>
+							<span>Jueves 14 Octubre 2021 | 13hrs</span>
+							<span>Zoom ID: 85127770837</span>
+							<span>Codigo de Acceso: SNEF@2021</span>
+						</div>
+					</div>
 				</div>
-				<div class="Pagraph">
-					<span>Somos una institución que brinda educación pública de tipo superior tecnológica que forma profesionistas competitivos con sentido humanístico e integral, capaces de aplicar de forma creativa e innovadora los conocimientos científicos y tecnológicos que les permita integrarse al desarrollo de su entorno de manera sustentable, promoviendo la igualdad de oportunidades y fortaleciendo su identidad cultural.</span>
+				<div class="Link">
+					<span>Ver evento</span>
 				</div>
-			</div>
+			</a>
 		</div>
-		<div class="Vision">
-			<div class="Logo">
-				<img src="Imagenes/Logos/tecnmlogo.jpg">
-			</div>
-			<div class="Text">
-				<div class="Title">
-					<span>Visión</span>
+		<div class="EventContainer"><!-- COPYPASTE -->
+			<a href="Imagenes/THUMBNAIL_2.jpeg" target="_Blank" class="InfoContainer">
+				<div class="Container">
+					<div class="ImgContainer">
+						<img src="Imagenes/THUMBNAIL_2.jpeg">
+					</div>
+					<div class="TextContainer">
+						<div class="Title">
+							<span>Semana nacional de Educacion Financiera</span>
+						</div>
+						<div class="InfoText">
+							<span>Conferencia: Utilizar el reporte de credito a tu favor</span>
+							<span>Viernes 15 Octubre 2021 | 17hrs</span>
+							<span>Zoom ID: 87365439322</span>
+							<span>Codigo de Acceso: SNEF@2021</span>
+						</div>
+					</div>
 				</div>
-				<div class="Pagraph">
-					<span>Mediante el cumplimiento de lo dispuesto en el Programa Institucional 2016-2022, el Instituto Tecnológico de Felipe Carrillo Puerto será una institución de excelencia y de vanguardia, con prestigio regional, nacional e internacional, con liderazgo en la generación y aplicación del conocimiento científico-tecnológico, en un marco de valores y principios éticos, que permitan a sus egresados contribuir de manera significativa al desarrollo sustentable del municipio, del estado y del país.</span>
+				<div class="Link">
+					<span>Ver evento</span>
 				</div>
-			</div>
+			</a>
+		</div>
+		<div class="EventContainer"><!-- COPYPASTE -->
+			<a href="imagenes/24aniversariotec.jpg" target="_Blank" class="InfoContainer">
+				<div class="Container">
+					<div class="ImgContainer">
+						<img src="imagenes/24aniversariotec.jpg">
+					</div>
+					<div class="TextContainer">
+						<div class="Title">
+							<span>Celebra el TEC Nacional de Mexico Campus Felipe Carrillo Puerto su XXIV Aniversario en el inicio del ciclo escolar</span>
+						</div>
+						<div class="InfoText">
+							<span>3 de Septiembre</span>
+						</div>
+					</div>
+				</div>
+				<div class="Link">
+					<span>Ver evento</span>
+				</div>
+			</a>
 		</div>
 	</div>
 	
