--- a/pageunit_1.html
+++ b/pageunit_1.html
@@ -7,7 +7,7 @@
 
 	<link rel="icon" type="image/x-icon" href="imagenes/Logos/@favicon.ico"/>
 	<link rel="stylesheet" type="text/css" href="Css/MainStyles.css">
-	<link rel="stylesheet" type="text/css" href="Css/PageUnit_2.css">
+	<link rel="stylesheet" type="text/css" href="Css/PageUnit_1.css">
 
 	<!-- ICONS -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -62,34 +62,17 @@
 
 	<!-- MAIN -->
 	<div class="Main">
-		<div class="TextHeader">
-			<span>Filosofía Institucional</span>
+		<div class="ImgContainer">
+			<img src="Imagenes/Untitled-2.png">
 		</div>
-		<div class="Mision">
-			<div class="Logo">
-				<img src="Imagenes/Logos/tecnmlogo.jpg">
-			</div>
-			<div class="Text">
-				<div class="Title">
-					<span>Misión</span>
-				</div>
-				<div class="Pagraph">
-					<span>Somos una institución que brinda educación pública de tipo superior tecnológica que forma profesionistas competitivos con sentido humanístico e integral, capaces de aplicar de forma creativa e innovadora los conocimientos científicos y tecnológicos que les permita integrarse al desarrollo de su entorno de manera sustentable, promoviendo la igualdad de oportunidades y fortaleciendo su identidad cultural.</span>
-				</div>
-			</div>
-		</div>
-		<div class="Vision">
-			<div class="Logo">
-				<img src="Imagenes/Logos/tecnmlogo.jpg">
-			</div>
-			<div class="Text">
-				<div class="Title">
-					<span>Visión</span>
-				</div>
-				<div class="Pagraph">
-					<span>Mediante el cumplimiento de lo dispuesto en el Programa Institucional 2016-2022, el Instituto Tecnológico de Felipe Carrillo Puerto será una institución de excelencia y de vanguardia, con prestigio regional, nacional e internacional, con liderazgo en la generación y aplicación del conocimiento científico-tecnológico, en un marco de valores y principios éticos, que permitan a sus egresados contribuir de manera significativa al desarrollo sustentable del municipio, del estado y del país.</span>
-				</div>
-			</div>
+		<div class="SideText">
+			<div class="TextTitle"><span>Mensaje de Bienvenida</span></div>
+			<div><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span></div>
 		</div>
 	</div>
 	
