--- a/PageUnit_1.html
+++ b/PageUnit_1.html
@@ -67,12 +67,7 @@
 		</div>
 		<div class="SideText">
 			<div class="TextTitle"><span>Mensaje de Bienvenida</span></div>
-			<div><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span></div>
+			<div><span> El TECnm CAMPUS FELIPE CARRILLO PUERTO, UNIDAD CHUNHUHUB QUINTANA ROO, les da la Bienvenida a todos los Alumnos y Alumnas por este nuevo siclo escolar. Agradecemos la confianza y compromiso de todos los que integramos en este Proyecto Educativo y esperamos con alegría cumplir con nuevos objetivos y metas. MC. Diego Ramón Briceño Domínguez. Director General del Instituto tecnologico de Felipe Carrillo Puerto. </span></div>
 		</div>
 	</div>
 	
