--- a/PageUnit_3.html
+++ b/PageUnit_3.html
@@ -170,7 +170,7 @@ a#subtn_6181a5564386a:hover { background-color: #b92c4f;}
                                                     <a id="anchor-antecedente" class="anchor"></a>Antecedente
                                                 </h2>
 
-                                                <p><img style="margin-right: 30px; margin-left: 30px; float: right;" src="Imagenes/THUMBNAIL_0.jpeg" alt="" width="330">
+                                                <p><img style="margin-right: 30px; margin-left: 30px; float: right;" src="Imagenes/THUMBNAIL_0.jpg" alt="" width="330">
                                                 </p>
                                                 <p style="text-align: justify;">&nbsp;</p>
                                                 <p style="text-align: justify;">Un antecedente de suma importancia, es mencionar la fecha 15 de Octubre de 1997, cuando se firma el convenio de Coordinación entre la Secretaría de Educación Pública y el Gobierno del Estado de Quintana Roo, el cual da sustento a la fundación, políticas, lineamientos y normas, que se establecen para el funcionamiento académico, administrativo y financiero del tecnológico.
@@ -187,7 +187,7 @@ a#subtn_6181a5564386a:hover { background-color: #b92c4f;}
                                                 </h2>
 
                                                 <p>
-                                                    <img style="float: left; margin-right: 30px; margin-left: 30px;" src="Imagenes/THUMBNAIL_1.png" alt="" width="330">
+                                                    <img style="float: left; margin-right: 30px; margin-left: 30px;" src="Imagenes/THUMBNAIL_1.jpg" alt="" width="330">
                                                 </p>
                                                 <p style="text-align: justify;">Con el inicio de sus actividades administrativas el 15 de agosto de 1997, durante los siguientes quince años, el ITSFCP ha brindado sus servicios educativos ininterrumpidamente a jóvenes primordialmente de escasos recursos y en su mayoría provenientes de comunidades mayas, abarcando los Municipios de Felipe Carrillo Puerto y José María Morelos, el norte del municipio de Othón P. Blanco, así como la parte sur de los municipios de Solidaridad y Lázaro Cárdenas; e incluso de municipios colindantes del estado de Yucatán.
                                                 </p>
