--- a/institucion.html
+++ b/institucion.html
@@ -8,8 +8,6 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/MainStyles.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="js/jquery-1.11.2.min.js"><\/script>')</script>
@@ -89,7 +87,7 @@
 					<div class="col-xs-12 col-sm-4">
 						
 						<ul class="list-unstyled full-reset">
-							<li><a href="Pagina-web/Pagina1.html"> INGENIERIA EN SISTEMAS COMPUTACIONALES</a></li>
+							<li><a href="Pagina-web/Pagina1.html" class="estilotext"> INGENIERIA EN SISTEMAS COMPUTACIONALES</a></li>
 							
 						</ul>
 					</div>
@@ -238,7 +236,7 @@
 			<p>SNBBBJ</p>
 		</a>
 
-		<a href="https://www.tecnm.mx/" class="open-link-newTab">
+		<a href="https://www.facebook.com/103978841471097/posts/394598442409134/?sfnsn=scwspmo" class="open-link-newTab">
 			<i class="fa fa-facebook"></i>
 			<p>FACEBOOK</p>
 		</a>
