--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 			<p>SNBBBJ</p>
 		</a>
 
-		<a href="https://www.facebook.com/103978841471097/posts/394598442409134/?sfnsn=scwspmo" class="open-link-newTab">
+		<a href="https://www.tecnm.mx/" class="open-link-newTab">
 			<i class="fa fa-facebook"></i>
 			<p>FACEBOOK</p>
 		</a>
