--- a/institucion.html
+++ b/institucion.html
@@ -45,7 +45,7 @@
 				<li><a href="secretaria.html">Mensaje de Bienvenida</a></li>
 				<li><a href="#" class="btm-mega-menu1">Oferta Educativa &nbsp;<i class="fa fa-caret-down"></i></a></li>
 				<li><a href="galeria.html">Galería</a></li>
-				<li><a href="#" class="btm-mega-menu">Más &nbsp;<i class="fa fa-caret-down"></i></a></li>
+				<!--<li><a href="#" class="btm-mega-menu">Más &nbsp;<i class="fa fa-caret-down"></i></a></li>-->
 			</ul>
 		</nav>
 		<!--======================================== Mega menu ========================================-->
