--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 						<span class="full-reset titles">Enlaces importantes</span>
 						<ul class="list-unstyled full-reset">
 							
-							<li><a href="https://yo-y-mi-vocacion.webnode.mx/products/universidades-publicas-y-privadas-del-estado-de-quintana-roo/" class="open-link-newTab"><i class="fa fa-flask"></i>&nbsp; Universidades</a></li>
-							<li><a href="https://www.carrillopuerto.tecnm.mx/" class="open-link-newTab"><i class="fa fa-gavel">TecNM Campus Felipe Carrillo Puerto</i>&nbsp; </a></li>
+							<li><a href="https://yo-y-mi-vocacion.webnode.mx/products/universidades-publicas-y-privadas-del-estado-de-quintana-roo/" class="open-link-newTab"><i class="fa fa-flask"></i>&nbsp; UNIVERSIDADES</a></li>
+							<li><a href="https://www.carrillopuerto.tecnm.mx/" class="open-link-newTab"><i class="fa fa-gavel">CAMPUS FELIPE CARRILLO PUERTO</i>&nbsp; </a></li>
 						</ul>
 					</div>
 					
